--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
 <body>
 
 
-<p>Page</p>
+<form id="registerForm">
+	<label>
+		username:
+		<input type="text" name="username">
+	</label>
+	<label>
+		password:
+		<input type="password" name="password">
+	</label>
+	<input type="submit" value="Register">
+</form>
 
 <script src="js/app.js"></script>
 
