--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <form id="registerForm">
 	<label>
 		username:
-		<input type="text" name="username">
+		<input id="username" type="text" name="username">
 	</label>
 	<label>
 		password:
-		<input type="password" name="password">
+		<input id="password" type="password" name="password">
 	</label>
 	<input type="submit" value="Register">
 </form>
