--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	</label>
 	<label>
 		password:
-		<input id="password" type="password" name="password">
+		<input id="password" type="password" name="password" autocomplete="off">
 	</label>
 	<input type="submit" value="Register">
 </form>
