--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		password:
 		<input id="password" type="password" name="password" autocomplete="off">
 	</label>
-	<input type="submit" value="Register">
+	<input type="submit" value="Register" disabled="disabled">
 </form>
 
 <script src="js/app.js"></script>
