--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
 	<input type="submit" value="Register" disabled="disabled">
 </form>
 
+<form id="loginForm">
+	<label>
+		username:
+		<input id="usernameLogin" type="text" name="username">
+	</label>
+	<label>
+		password:
+		<input id="passwordLogin" type="password" name="password" autocomplete="off">
+	</label>
+	<input type="submit" value="Login">
+</form>
+
 <script src="js/app.js"></script>
 
 </body>
